--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,7 +11,7 @@
         android:networkSecurityConfig="@xml/network_security_config"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.MyLibrary">
+        android:theme="@style/Theme.Elibrary">
         <activity
             android:name=".ui.activity.BookActivity"
             android:exported="false" />
