--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,10 +13,7 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.Elibrary">
         <activity
-            android:name=".ui.activity.BookActivity"
-            android:exported="false" />
-        <activity
-            android:name=".ui.activity.MainActivity"
+            android:name=".MainActivity"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
