--- a/app/build.gradle
+++ b/app/build.gradle
@@ -54,4 +54,11 @@ dependencies {
 
     implementation 'androidx.room:room-runtime:2.6.1'
     annotationProcessor 'androidx.room:room-compiler:2.6.1'
+
+    implementation 'com.google.dagger:dagger:2.35.1'
+    annotationProcessor 'com.google.dagger:dagger-compiler:2.35.1'
+
+    implementation 'com.google.dagger:dagger-android:2.35.1'
+    implementation 'com.google.dagger:dagger-android-support:2.35.1'
+    annotationProcessor 'com.google.dagger:dagger-android-processor:2.35.1'
 }
