--- a/app/build.gradle
+++ b/app/build.gradle
@@ -57,6 +57,8 @@ dependencies {
     implementation 'com.github.bumptech.glide:glide:4.16.0'
 
     implementation 'androidx.room:room-runtime:2.6.1'
+    androidTestImplementation project(path: ':app')
+    androidTestImplementation project(path: ':app')
     annotationProcessor 'androidx.room:room-compiler:2.6.1'
 
     implementation 'com.google.dagger:dagger:2.35.1'
@@ -73,4 +75,5 @@ dependencies {
     implementation 'com.squareup.okhttp3:mockwebserver:4.12.0'
 
     testImplementation 'androidx.arch.core:core-testing:2.2.0'
+    androidTestImplementation 'androidx.arch.core:core-testing:2.2.0'
 }
