--- a/app/build.gradle
+++ b/app/build.gradle
@@ -12,7 +12,7 @@ android {
         versionCode 1
         versionName "1.0"
 
-        testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
+        testInstrumentationRunner "com.oscarliang.elibrary.util.BookTestRunner"
 
         javaCompileOptions {
             annotationProcessorOptions {
@@ -47,7 +47,7 @@ dependencies {
     implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.5'
-    androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
+    androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
 
     implementation 'androidx.swiperefreshlayout:swiperefreshlayout:1.1.0'
 
@@ -57,8 +57,6 @@ dependencies {
     implementation 'com.github.bumptech.glide:glide:4.16.0'
 
     implementation 'androidx.room:room-runtime:2.6.1'
-    androidTestImplementation project(path: ':app')
-    androidTestImplementation project(path: ':app')
     annotationProcessor 'androidx.room:room-compiler:2.6.1'
 
     implementation 'com.google.dagger:dagger:2.35.1'
@@ -77,5 +75,10 @@ dependencies {
     testImplementation 'androidx.arch.core:core-testing:2.2.0'
     androidTestImplementation 'androidx.arch.core:core-testing:2.2.0'
 
-    testImplementation 'org.mockito:mockito-core:2.25.0'
+    testImplementation 'org.mockito:mockito-core:3.3.3'
+    androidTestImplementation 'org.mockito:mockito-android:3.3.3'
+
+    androidTestImplementation 'androidx.test:rules:1.5.0'
+
+    androidTestImplementation 'androidx.test.espresso:espresso-contrib:3.3.0'
 }
