--- a/app/build.gradle
+++ b/app/build.gradle
@@ -41,44 +41,65 @@ android {
 }
 
 dependencies {
-
     implementation 'androidx.appcompat:appcompat:1.6.1'
     implementation 'com.google.android.material:material:1.11.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
-    testImplementation 'junit:junit:4.13.2'
-    androidTestImplementation 'androidx.test.ext:junit:1.1.5'
-    androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
 
+    // Swipe refresh layout
     implementation 'androidx.swiperefreshlayout:swiperefreshlayout:1.1.0'
 
-    implementation 'com.squareup.retrofit2:retrofit:2.9.0'
-    implementation 'com.squareup.retrofit2:converter-gson:2.9.0'
+    // Retrofit
+    def retrofit_version = "2.9.0"
+    implementation "com.squareup.retrofit2:retrofit:$retrofit_version"
+    implementation "com.squareup.retrofit2:converter-gson:$retrofit_version"
 
+    // Glide
     implementation 'com.github.bumptech.glide:glide:4.16.0'
 
-    implementation 'androidx.room:room-runtime:2.6.1'
-    annotationProcessor 'androidx.room:room-compiler:2.6.1'
+    // Room
+    def room_version = "2.6.1"
+    implementation "androidx.room:room-runtime:$room_version"
+    annotationProcessor "androidx.room:room-compiler:$room_version"
 
-    implementation 'com.google.dagger:dagger:2.35.1'
-    annotationProcessor 'com.google.dagger:dagger-compiler:2.35.1'
+    // Dagger
+    def dagger_version = "2.35.1"
+    implementation "com.google.dagger:dagger:$dagger_version"
+    annotationProcessor "com.google.dagger:dagger-compiler:$dagger_version"
 
-    implementation 'com.google.dagger:dagger-android:2.35.1'
-    implementation 'com.google.dagger:dagger-android-support:2.35.1'
-    annotationProcessor 'com.google.dagger:dagger-android-processor:2.35.1'
+    // Dagger android
+    implementation "com.google.dagger:dagger-android:$dagger_version"
+    implementation "com.google.dagger:dagger-android-support:$dagger_version"
+    annotationProcessor "com.google.dagger:dagger-android-processor:$dagger_version"
 
+    // Nav component
     def nav_version = "2.3.5"
     implementation "androidx.navigation:navigation-fragment:$nav_version"
     implementation "androidx.navigation:navigation-ui:$nav_version"
+    androidTestImplementation "androidx.navigation:navigation-testing:$nav_version"
 
+    // Unit test
+    testImplementation 'junit:junit:4.13.2'
+    androidTestImplementation 'androidx.test.ext:junit:1.1.5'
+
+    // Espresso test
+    def espresso_version = "3.3.0"
+    androidTestImplementation "androidx.test.espresso:espresso-core:$espresso_version"
+    androidTestImplementation "androidx.test.espresso:espresso-contrib:$espresso_version"
+
+    // Mock webserver test
     implementation 'com.squareup.okhttp3:mockwebserver:4.12.0'
 
-    testImplementation 'androidx.arch.core:core-testing:2.2.0'
-    androidTestImplementation 'androidx.arch.core:core-testing:2.2.0'
+    // Architecture components test
+    def androidx_arch_test_version = "2.2.0"
+    testImplementation "androidx.arch.core:core-testing:$androidx_arch_test_version"
+    androidTestImplementation "androidx.arch.core:core-testing:$androidx_arch_test_version"
 
-    testImplementation 'org.mockito:mockito-core:3.3.3'
-    androidTestImplementation 'org.mockito:mockito-android:3.3.3'
+    // Mockito test
+    def mockito_version = "3.3.3"
+    testImplementation "org.mockito:mockito-core:$mockito_version"
+    androidTestImplementation "org.mockito:mockito-android:$mockito_version"
 
-    androidTestImplementation 'androidx.test:rules:1.5.0'
-
-    androidTestImplementation 'androidx.test.espresso:espresso-contrib:3.3.0'
+    // Fragment test
+    def fragment_version = "1.6.2"
+    debugImplementation "androidx.fragment:fragment-testing:$fragment_version"
 }
